# lib/api/controllers/nodegroup.js
@@ -14,7 +14,9 @@ var postNodegroup = controller(function(req) {
 var postTaskByNodegroupId = controller(function(req) {
     var nodegroupId = req.swagger.params.nodegroupId.value;
     var taskName = req.swagger.params.taskName.value;
-    return nodeService.postTaskByNodegroupId(nodegroupId, taskName);
+    var startDelay = req.swagger.params.body.value.startDelay;
+    var delay = req.swagger.params.body.value.delay;
+    return nodeService.postTaskByNodegroupId(nodegroupId, taskName, startDelay, delay);
 });
 
 module.exports = {
